--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.16",
+    "@tailwindcss/vite": "^4.1.17",
     "firebase": "^12.5.0",
     "react": "^19.2.0",
     "react-dom": "^19.1.1",
     "react-router": "^7.9.5",
-    "tailwindcss": "^4.1.16"
+    "react-router-dom": "^7.9.5",
+    "react-toastify": "^11.0.5",
+    "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
